--- a/services/api-gateway/src/main/resources/application.yml
+++ b/services/api-gateway/src/main/resources/application.yml
@@ -78,244 +78,11 @@ gateway:
   # ===========================================================================
   # GATEWAY ROUTES CONFIGURATION
   # ===========================================================================
+  # ✅ Routes are managed via DynamicRoutesConfig.java (Type-safe, ZERO hardcoded!)
+  # 📍 Location: api-gateway/config/DynamicRoutesConfig.java
   cloud:
     gateway:
-      routes:
-        # User Service - Auth Check Contact (Public - Aggressive Rate Limiting)
-        # Pattern: /api/v1/users/auth/check-contact
-        - id: user-service-auth-check
-          uri: ${USER_SERVICE_URL:http://localhost:8081}
-          predicates:
-            - Path=/api/v1/users/auth/check-contact
-          filters:
-            - name: CircuitBreaker
-              args:
-                name: userServiceCircuitBreaker
-                fallbackUri: forward:/fallback/user-service
-            - name: RequestRateLimiter
-              args:
-                key-resolver: "#{@smartKeyResolver}"
-                redis-rate-limiter.replenishRate: 10
-                redis-rate-limiter.burstCapacity: 15
-                redis-rate-limiter.requestedTokens: 1
-            - name: Retry
-              args:
-                retries: 2
-                methods: POST
-                backoff:
-                  firstBackoff: 50ms
-                  maxBackoff: 500ms
-                  factor: 2
-                  basedOnPreviousValue: true
-
-        # User Service - Login (Public - Strict Rate Limiting)
-        # Pattern: /api/v1/users/auth/login
-        - id: user-service-auth-login
-          uri: ${USER_SERVICE_URL:http://localhost:8081}
-          predicates:
-            - Path=/api/v1/users/auth/login
-          filters:
-            - name: CircuitBreaker
-              args:
-                name: userServiceCircuitBreaker
-                fallbackUri: forward:/fallback/user-service
-            - name: RequestRateLimiter
-              args:
-                key-resolver: "#{@smartKeyResolver}"
-                redis-rate-limiter.replenishRate: 5
-                redis-rate-limiter.burstCapacity: 10
-                redis-rate-limiter.requestedTokens: 1
-            - name: Retry
-              args:
-                retries: 1
-                methods: POST
-                backoff:
-                  firstBackoff: 100ms
-                  maxBackoff: 500ms
-                  factor: 2
-                  basedOnPreviousValue: true
-
-        # User Service - Setup Password (Public - Very Strict Rate Limiting)
-        # Pattern: /api/v1/users/auth/setup-password
-        - id: user-service-auth-setup
-          uri: ${USER_SERVICE_URL:http://localhost:8081}
-          predicates:
-            - Path=/api/v1/users/auth/setup-password
-          filters:
-            - name: CircuitBreaker
-              args:
-                name: userServiceCircuitBreaker
-                fallbackUri: forward:/fallback/user-service
-            - name: RequestRateLimiter
-              args:
-                key-resolver: "#{@smartKeyResolver}"
-                redis-rate-limiter.replenishRate: 3
-                redis-rate-limiter.burstCapacity: 5
-                redis-rate-limiter.requestedTokens: 1
-            - name: Retry
-              args:
-                retries: 1
-                methods: POST
-                backoff:
-                  firstBackoff: 100ms
-                  maxBackoff: 500ms
-                  factor: 2
-                  basedOnPreviousValue: true
-
-        # Public Endpoints - Tenant Onboarding & Other Public APIs (Strict Rate Limiting)
-        # Pattern: /api/v1/public/** (catch-all for public endpoints)
-        - id: public-endpoints
-          uri: ${USER_SERVICE_URL:http://localhost:8081}
-          predicates:
-            - Path=/api/v1/public/**
-          filters:
-            - name: CircuitBreaker
-              args:
-                name: userServiceCircuitBreaker
-                fallbackUri: forward:/fallback/user-service
-            - name: RequestRateLimiter
-              args:
-                key-resolver: "#{@smartKeyResolver}"
-                redis-rate-limiter.replenishRate: 5
-                redis-rate-limiter.burstCapacity: 10
-                redis-rate-limiter.requestedTokens: 1
-            - name: Retry
-              args:
-                retries: 1
-                methods: POST,GET
-                backoff:
-                  firstBackoff: 100ms
-                  maxBackoff: 500ms
-                  factor: 2
-                  basedOnPreviousValue: true
-
-        # User Service - Other Public Auth Routes (Moderate Rate Limiting)
-        # Pattern: /api/v1/users/auth/** (catch-all for other auth endpoints)
-        - id: user-service-public
-          uri: ${USER_SERVICE_URL:http://localhost:8081}
-          predicates:
-            - Path=/api/v1/users/auth/**
-          filters:
-            - name: CircuitBreaker
-              args:
-                name: userServiceCircuitBreaker
-                fallbackUri: forward:/fallback/user-service
-            - name: RequestRateLimiter
-              args:
-                key-resolver: "#{@smartKeyResolver}"
-                redis-rate-limiter.replenishRate: 20
-                redis-rate-limiter.burstCapacity: 30
-                redis-rate-limiter.requestedTokens: 1
-            - name: Retry
-              args:
-                retries: 3
-                methods: GET,POST
-                backoff:
-                  firstBackoff: 50ms
-                  maxBackoff: 500ms
-                  factor: 2
-                  basedOnPreviousValue: true
-
-        # User Service - Protected Routes (With Rate Limiting)
-        # Pattern: /api/v1/users/** (excluding auth)
-        - id: user-service-protected
-          uri: ${USER_SERVICE_URL:http://localhost:8081}
-          predicates:
-            - Path=/api/v1/users/**
-          filters:
-            - name: CircuitBreaker
-              args:
-                name: userServiceCircuitBreaker
-                fallbackUri: forward:/fallback/user-service
-            - name: RequestRateLimiter
-              args:
-                key-resolver: "#{@smartKeyResolver}"
-                redis-rate-limiter.replenishRate: 50
-                redis-rate-limiter.burstCapacity: 100
-                redis-rate-limiter.requestedTokens: 1
-            - name: Retry
-              args:
-                retries: 3
-                methods: GET
-                backoff:
-                  firstBackoff: 50ms
-                  maxBackoff: 500ms
-                  factor: 2
-                  basedOnPreviousValue: true
-
-        # Company Service Routes (Protected - With Rate Limiting)
-        - id: company-service
-          uri: ${COMPANY_SERVICE_URL:http://localhost:8083}
-          predicates:
-            - Path=/api/v1/companies/**
-          filters:
-            - name: CircuitBreaker
-              args:
-                name: companyServiceCircuitBreaker
-                fallbackUri: forward:/fallback/company-service
-            - name: RequestRateLimiter
-              args:
-                key-resolver: "#{@smartKeyResolver}"
-                redis-rate-limiter.replenishRate: 50
-                redis-rate-limiter.burstCapacity: 100
-                redis-rate-limiter.requestedTokens: 1
-            - name: Retry
-              args:
-                retries: 3
-                methods: GET
-                backoff:
-                  firstBackoff: 50ms
-                  maxBackoff: 500ms
-
-        # Contact Service - Find by Value (Internal - Strict Rate Limiting)
-        # Pattern: /api/v1/contacts/find-by-value
-        # Used by User Service for authentication - Should only accept internal calls
-        - id: contact-service-find-by-value
-          uri: ${CONTACT_SERVICE_URL:http://localhost:8082}
-          predicates:
-            - Path=/api/v1/contacts/find-by-value
-          filters:
-            - name: CircuitBreaker
-              args:
-                name: contactServiceCircuitBreaker
-                fallbackUri: forward:/fallback/contact-service
-            - name: RequestRateLimiter
-              args:
-                key-resolver: "#{@smartKeyResolver}"
-                redis-rate-limiter.replenishRate: 5
-                redis-rate-limiter.burstCapacity: 10
-                redis-rate-limiter.requestedTokens: 1
-            - name: Retry
-              args:
-                retries: 2
-                methods: GET
-                backoff:
-                  firstBackoff: 50ms
-                  maxBackoff: 500ms
-
-        # Contact Service Routes (Protected - With Rate Limiting)
-        - id: contact-service
-          uri: ${CONTACT_SERVICE_URL:http://localhost:8082}
-          predicates:
-            - Path=/api/v1/contacts/**
-          filters:
-            - name: CircuitBreaker
-              args:
-                name: contactServiceCircuitBreaker
-                fallbackUri: forward:/fallback/contact-service
-            - name: RequestRateLimiter
-              args:
-                key-resolver: "#{@smartKeyResolver}"
-                redis-rate-limiter.replenishRate: 50
-                redis-rate-limiter.burstCapacity: 100
-                redis-rate-limiter.requestedTokens: 1
-            - name: Retry
-              args:
-                retries: 3
-                methods: GET
-                backoff:
-                  firstBackoff: 50ms
-                  maxBackoff: 500ms
+      # Routes configured programmatically for better type-safety and flexibility
 
       # Global CORS Configuration
       # Updated to Spring Cloud Gateway 4.x format
