--- a/pom.xml
+++ b/pom.xml
@@ -92,9 +92,9 @@
         <module>services/user-service</module>
         <module>services/contact-service</module>
         <module>services/company-service</module>
+        <module>services/notification-service</module>
 
         <!-- Service modules (Coming Soon - Uncomment when created) -->
-        <!--<module>services/notification-service</module>-->
         <!--<module>services/hr-service</module>-->
         <!--<module>services/inventory-service</module>-->
         <!--<module>services/procurement-service</module>-->
