--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -278,16 +278,22 @@ services:
       INTERNAL_API_KEY: ${INTERNAL_API_KEY}
       JMX_PORT: 9014
       SERVER_PORT: 8084
-      # ✅ Platform Email Configuration (SMTP)
-      PLATFORM_SMTP_HOST: ${PLATFORM_SMTP_HOST:-smtp.gmail.com}
-      PLATFORM_SMTP_PORT: ${PLATFORM_SMTP_PORT:-587}
-      PLATFORM_SMTP_USERNAME: ${PLATFORM_SMTP_USERNAME:-info@storeandsale.shop}
+      # ✅ Platform Email Configuration (SMTP - Hostinger)
+      PLATFORM_SMTP_HOST: ${PLATFORM_SMTP_HOST:-smtp.hostinger.com}
+      PLATFORM_SMTP_PORT: ${PLATFORM_SMTP_PORT:-465}
+      PLATFORM_SMTP_USERNAME: ${PLATFORM_SMTP_USERNAME:-noreply@storeandsale.shop}
       PLATFORM_SMTP_PASSWORD: ${PLATFORM_SMTP_PASSWORD}
-      PLATFORM_EMAIL_FROM: ${PLATFORM_EMAIL_FROM:-info@storeandsale.shop}
+      PLATFORM_EMAIL_FROM: ${PLATFORM_EMAIL_FROM:-noreply@storeandsale.shop}
       PLATFORM_EMAIL_FROM_NAME: ${PLATFORM_EMAIL_FROM_NAME:-Store and Sale}
-      # ✅ Platform WhatsApp/SMS Configuration
+      # ✅ Platform WhatsApp Configuration (Meta Cloud API)
       PLATFORM_WHATSAPP_ENABLED: ${PLATFORM_WHATSAPP_ENABLED:-true}
+      PLATFORM_WHATSAPP_PROVIDER: ${PLATFORM_WHATSAPP_PROVIDER:-META}
+      PLATFORM_WHATSAPP_ACCESS_TOKEN: ${PLATFORM_WHATSAPP_ACCESS_TOKEN}
+      PLATFORM_WHATSAPP_PHONE_NUMBER_ID: ${PLATFORM_WHATSAPP_PHONE_NUMBER_ID}
+      PLATFORM_WHATSAPP_WABA_ID: ${PLATFORM_WHATSAPP_WABA_ID}
       PLATFORM_WHATSAPP_FROM_NUMBER: ${PLATFORM_WHATSAPP_FROM_NUMBER:-+447553838399}
+      PLATFORM_WHATSAPP_TEST_NUMBER: ${PLATFORM_WHATSAPP_TEST_NUMBER}
+      # ✅ Platform SMS Configuration (Disabled)
       PLATFORM_SMS_ENABLED: ${PLATFORM_SMS_ENABLED:-false}
       PLATFORM_SMS_FROM_NUMBER: ${PLATFORM_SMS_FROM_NUMBER:-+447553838399}
       # ✅ Notification Configuration
