chore: update gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -70,11 +70,11 @@ tmp/
 
 # Environment & Configuration
 # ==========================================
-.env
-.env.local
-env.*.local
-env.backup.*
-!.env.example
+# .env
+# .env.local
+# env.*.local
+# env.backup.*
+# !.env.example
 
 # Docker
 # ==========================================
