fix: notification-service JWT config missing
- application.yml: jwt.expiration, jwt.refresh-expiration
- docker-compose.yml: JWT env vars for notification-service
- Fixes: 'Could not resolve placeholder jwt.expiration' error

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -275,6 +275,8 @@ services:
       REDIS_PASSWORD: ${REDIS_PASSWORD:-}
       KAFKA_BOOTSTRAP_SERVERS: kafka:9093
       JWT_SECRET: ${JWT_SECRET}
+      JWT_EXPIRATION: ${JWT_EXPIRATION:-3600000}
+      JWT_REFRESH_EXPIRATION: ${JWT_REFRESH_EXPIRATION:-86400000}
       INTERNAL_API_KEY: ${INTERNAL_API_KEY}
       JMX_PORT: 9014
       SERVER_PORT: 8084
