--- a/services/notification-service/src/main/resources/application-local.yml
+++ b/services/notification-service/src/main/resources/application-local.yml
@@ -18,20 +18,20 @@ spring:
     port: 6379
 
   mail:
-    host: smtp.hostinger.com
-    port: 465
-    username: info@storeandsale.shop
+    host: ${PLATFORM_SMTP_HOST:-smtp.hostinger.com}
+    port: ${PLATFORM_SMTP_PORT:-465}
+    username: ${PLATFORM_SMTP_USERNAME:-info@storeandsale.shop}
     password: ${PLATFORM_SMTP_PASSWORD:}
 
 notification:
   platform:
     email:
-      from: info@storeandsale.shop
-      fromName: Fabricode
+      from: ${PLATFORM_EMAIL_FROM:-info@storeandsale.shop}
+      fromName: ${PLATFORM_EMAIL_FROM_NAME:-Fabricode}
     whatsapp:
-      enabled: true
-      provider: META
-      fromNumber: +447553838399
+      enabled: ${PLATFORM_WHATSAPP_ENABLED:-true}
+      provider: ${PLATFORM_WHATSAPP_PROVIDER:-META}
+      fromNumber: ${PLATFORM_WHATSAPP_FROM_NUMBER:-+447553838399}
 
 logging:
   level:
