--- a/services/notification-service/src/main/resources/application-docker.yml
+++ b/services/notification-service/src/main/resources/application-docker.yml
@@ -3,9 +3,9 @@ server:
 
 spring:
   datasource:
-    url: jdbc:postgresql://postgres:5432/notification_db
-    username: ${DB_USERNAME}
-    password: ${DB_PASSWORD}
+    url: jdbc:postgresql://postgres:5432/${POSTGRES_DB}
+    username: ${POSTGRES_USER}
+    password: ${POSTGRES_PASSWORD}
 
   kafka:
     bootstrap-servers: kafka:9092
